# CppTrial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CppTrial_Workspace.code-workspace  NodeEditor.json  imgui.ini  main.cpp
Application/: .Package.h  Application.cpp  Application.h  CMakeLists.txt  Clipboard.h  DebugManager.cpp  DebugManager.h  ImGuiLab.cpp  ImGuiLab.h  Input.cpp  Input.h  InputEvent.h  InputManager.cpp  InputManager.h  Module.h  Window.h  WindowEvent.h  main.cpp
Application/Windows/: CMakeLists.txt  GLWindowsWindow.cpp  GLWindowsWindow.h  Input.h  WindowsClipboard.cpp  WindowsInputManager.cpp  WindowsInputManager.h  WindowsWindow.cpp  WindowsWindow.h
RenderOpenGL/: .Package.cpp  .Package.h  CMakeLists.txt  GLFrameBuffer.cpp  GLFrameBuffer.h  GLRenderManager.cpp  GLRenderManager.h  GLShader.cpp  GLTexture.cpp  GLVertexBuffer.cpp  GLVertexBuffer.h
RenderOpenGL/Windows/: GLWindowsWindow.cpp  GLWindowsWindow.h
Source/: CMakeLists.txt
Source/Core/: .Package.h  Allocator.h  Any.h  Array.h  CString.h  Delegate.h  DirectedGraph.h  Exception.h  Flags.h  Graph.h  Hash.h  HashMap.h  HashSet.h  List.h  Logger.h  Math.h  Memory.h  PriorityQueue.h  Queue.h  SortedMap.h  Stack.h  String.h  Template.h  Thread.h  Time.h  Timer.h  Tuple.h  Variant.h
Source/Core/Algo/: BinaryHeap.h  BinarySearch.h  GraphSearch.h  Sort.h  TopologicalSort.h
Source/Core/Container/: .Package.h  AVLTree.h  HashTable.h  RBTree.h  SkipList.h
Source/Core/String/: StringConvert.h  StringEncode.h  StringFormat.h
Source/Core/Template/: .Package.h  Concepts.h  IsCharType.h  TypeTraits.h
Source/Core/Thread/: .Package.h  AsyncTaskScheduler.h  RenderThread.h  ThreadPool.h
Source/Demos/: CMakeLists.txt
Source/Demos/ShaderToy/: CMakeLists.txt  Page.h  Page1.h  Page2.h  Page3.h  Page4.h  Page5.h  Page6.h  Page7.h  Page8.h  ShaderToy.cpp
Source/Experimental/: CMakeLists.txt  LearnAssimp.cpp  LearnPBR.cpp  LearnRenderGraph.cpp  LearnVK.cpp  ModelLoader.cpp  ShaderReflection.cpp
Source/Experimental/Widgets/: AnimationView.h  CameraView.h  ImageWindow.h  LightView.h  MaterialView.h  MeshView.h  ProfileWindow.h
Source/Framework/: CMakeLists.txt
Source/Framework/Application/: .Package.h  Application.cpp  Application.h  CMakeLists.txt  DebugManager.cpp  DebugManager.h  ImGuiLab.cpp  ImGuiLab.h  Input.cpp  Input.h  InputEvent.h  Logic.h  ThreadManager.cpp  ThreadManager.h  VirtualInputEvent.h  Window.h  WindowEvent.h  main.cpp
Source/Framework/Assets/: .Package.h  AssetExporter.h  AssetHandle.cpp  AssetHandle.h  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetObject.h  AssetPtr.h  CMakeLists.txt
Source/Framework/IO/: .Package.h  FileHandle.cpp  FileHandle.h  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  FileWatcher.cpp  FileWatcher.h  Test.cpp  Test.h
Source/Framework/Json/: .Package.h  CMakeLists.txt  JsonReader.h  JsonValue.cpp  JsonValue.h  JsonWriter.cpp  JsonWriter.h  Test.cpp  Test.h
Source/Framework/Math/: .Package.h  AABox.h  CMakeLists.txt  Circle.h  Color.h  IntVector.h  Matrix3.cpp  Matrix3.h  Matrix4.h  Quat.cpp  Quat.h  Ray.h  Rect.h  Sphere.h  Test.cpp  Test.h  Transform.cpp  Transform.h  Vector2.h  Vector3.h  Vector4.h
Source/Framework/Reflection/: .Package.h  CMakeLists.txt  Constructor.h  Enum.cpp  Enum.h  Method.h  ParamInfo.h  Property.h  QualifiedType.cpp  QualifiedType.h  Registry.cpp  Registry.h  Test.cpp  Test.h  Type.cpp  Type.h
Source/Framework/Render/: .Package.cpp  .Package.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Color.h  Font.h  FontGenerator.cpp  FontGenerator.h  ImageLoader.cpp  ImageLoader.h  Light.cpp  Light.h  Material.cpp  Material.h  MeshGenerator.cpp  MeshGenerator.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ParticleSystem.cpp  ParticleSystem.h  Pixmap.cpp  Pixmap.h  RenderAPI.h  RenderGraph.cpp  RenderGraph.h  RenderManager.cpp  RenderManager.h  RenderPass.cpp  RenderPass.h  RenderState.h  RenderTarget.h  (+9 more)
Source/Framework/RenderCore/: .Package.cpp  .Package.h  BlendState.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ComputeContext.h  ComputeState.cpp  ComputeState.h  ComputeStateObject.h  Context.h  CopyContext.h  DepthStencilState.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  FencedPool.h  FrameBuffer.cpp  FrameBuffer.h  GpuFence.h  GpuProfiler.h  GpuQueue.h  GpuTimer.h  GraphicsState.cpp  GraphicsState.h  GraphicsStateObject.h  IndexBuffer.h  ParameterBlock.cpp  ParameterBlock.h  Program.h  ProgramReflection.cpp  ProgramReflection.h  ProgramVars.cpp  ProgramVars.h  QueryPool.h  RasterizationState.h  RenderAPI.cpp  RenderAPI.h  RenderContext.h  (+18 more)
Source/Framework/RenderOpenGL/: .Package.cpp  CMakeLists.txt  GLRenderAPI.cpp  GLRenderManager.h  GLShader.h  GLVertexArray.cpp  GLVertexArray.h
Source/Framework/RenderVulkan/: .Package.cpp  .Package.h  CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanComputeContext.cpp  VulkanComputeContext.h  VulkanComputeStateObject.cpp  VulkanComputeStateObject.h  VulkanContext.cpp  VulkanContext.h  VulkanContextData.cpp  VulkanContextData.h  VulkanCopyContext.cpp  VulkanCopyContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanGpuFence.cpp  VulkanGpuFence.h  VulkanGpuQueue.cpp  VulkanGpuQueue.h  VulkanGpuTimer.cpp  VulkanGpuTimer.h  VulkanGraphicsStateObject.cpp  VulkanGraphicsStateObject.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanMemory.h  (+39 more)
Source/Framework/Utils/: .Package.h  CMakeLists.txt  DebugTimer.h  DynamicLib.cpp  DynamicLib.h  Event.h  Module.h  Name.cpp  Name.h  Regex.h  (+3 more)
Source/Tests/: CMakeLists.txt  TestCoreLib.cpp  TestCoreLib.h  TestUtilsLib.cpp  TestUtilsLib.h  main.cpp
(+329 files in other folders)
