add_subdirectory(Utils)
add_subdirectory(Math)
add_subdirectory(IO)
add_subdirectory(Reflection)
add_subdirectory(Json)
add_subdirectory(Assets)
add_subdirectory(RenderCore)
add_subdirectory(Render)
add_subdirectory(RenderOpenGL)
add_subdirectory(RenderVulkan)

if(WIN32)
    add_subdirectory(Application)
endif()